test/error/E4.1.chifn
{
	"type": "function",
	"name": 32
}
